EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==01/07/2010==
WildcardX: Fixed a EQEmuLoginServer crash that can happen as the result of a null reference in the database code.

==01/06/2010==
WildcardX: Fixed a bug that prevented Bot casters from casting if a mob becomes enraged.
WildcardX: Changed #bot list and #bot spawn commands to use bot name instead of the bot table id
WildcardX: Added new commands to save, load, delete and view bot groups. See the #bot botgroup help command to view them.
WildcardX: Fixed SQL syntax issues with database scripts for bots.
WildcardX: Fixed a bug that may have made it difficult to add bots to bot only groups.

<SQL Required for BOTS> 1077_botgroups.sql

==01/05/2010==
WildcardX: Fixed the EQEmuLoginServer project file, fixed a crash caused by referencing a NULL object and made a couple improvements to error handling.
Derision: Fix for quest::depopall related crash.
WildcardX: Improved healing for Bots inspired by contribtions from Bad_Captain! Bot healers won't let a HoT spell block them from casting a heal spell when in combat.
WildcardX: Bot pets will now seek to engage their target's from behind when their Bot master's are fighting the same mob from in front.

==12/30/2009==
Derision: Update azone2 with EQG v4 support.

==12/27/2009==
Derision: Fix to set required heading when zoning.

==12/23/2009==
cavedude: (Kilelen) Added quest functions quest::checktitle(int titleset), quest::enabletitle(int titleset), and quest::removetitle(int titleset) to allow Perl to enable or remove titles for a player.

Required SQL: utils/sql/svn/1057_titles.sql

==11/21/2009==
KLS: Ad hoc task selectors should ignore tasks that are not enabled now.

==11/19/2009==
Congdar: Fixed Resist Stat Caps, Removed GetMax...() methods calculating some AA's twice.

==11/18/2009==
KLS: Added check for character deletion as pointed out by Rogean.

==10/31/2009==